[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/inventory/ItemSlot.gd" type="Script" id=1]
[ext_resource path="res://assets/inventory/23.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/3.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 67, 67 )

[node name="ItemSlot" type="PanelContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 64.0
margin_bottom = 64.0

[node name="IconTexture" type="TextureRect" parent="MarginContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="QuantityLabel" type="Label" parent="."]
margin_right = 64.0
margin_bottom = 14.0
size_flags_vertical = 0
clip_text = true

[node name="EquippedLabel" type="Label" parent="."]
visible = false
self_modulate = Color( 0.121569, 0.87451, 0.203922, 1 )
margin_top = 50.0
margin_right = 64.0
margin_bottom = 64.0
size_flags_vertical = 8
text = "E"
align = 2
clip_text = true
